k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
  namespace: wisecow-ns1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: siddesh051/wise5:latest
        ports:
        - containerPort: 4499
