k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wisecow
  namespace: wisecow-ns1
spec:
  type: ClusterIP 
  selector:
    app: wisecow
  ports:
  - port: 4499
    targetPort: 4499
